[package]
name = "anchorkit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "anchorkit"
path = "src/bin/anchorkit.rs"

[features]
default = ["std"]
std = ["serde", "serde_json", "toml", "regex"]
wasm = []
mock-only = []
stress-tests = []

[dependencies]
soroban-sdk = "21.7.0"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
regex = { version = "1.10", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
soroban-sdk = { version = "21.7.0", features = ["testutils"] }
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
